chore: add peer deps to own json

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "start": "echo start",
     "test:e2e": "echo test:e2e",
     "test:e2e:report": "echo test:e2e:report"
+  },
+  "peerDependencies": {
+    "@nebula.js/stardust": ">=1.2.3"
   }
 }
