--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "test:e2e:report": "echo test:e2e:report"
   },
   "peerDependencies": {
-    "@nebula.js/stardust": "^1.2.3"
+    "@nebula.js/stardust": ">=1.2.3"
   }
 }
