fix: set pnpm version to 8 (#58)
Signed-off-by: Johan Enell <johan.enell@qlik.com>

--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -57,7 +57,7 @@ runs:
       if: inputs.package_manager == 'pnpm'
       uses: pnpm/action-setup@v2
       with:
-        version: latest
+        version: 8
 
     - name: Setup bun
       if: inputs.package_manager == 'bun'
