feat!: node version should be defined in file
Use either package.json, .node-version or .nvmrc
to define the node version to be used

BREAKING CHANGE: node version has to be specified
Signed-off-by: Johan Enell <johan.enell@qlik.com>

--- a/actions/scan-packages/action.yaml
+++ b/actions/scan-packages/action.yaml
@@ -28,7 +28,7 @@ runs:
         if [ "$scripts" != "null"  ]; then
           echo 'scripts=$scripts' >> "$GITHUB_OUTPUT"
         else
-          echo "::error::Error while reading or parsing the JSON. Couldn't find a script section"
+          echo "::error::Couldn't find a script section in package.json"
         fi
 
     - name: Verify stardust
