--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -54,7 +54,7 @@ runs:
     - name: Setup Node
       uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version-file: package.json
         cache: pnpm
 
     - name: Install dependencies
