--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
   },
   "peerDependencies": {
     "@nebula.js/stardust": ">=1.2.3"
-  }
+  },
+  "packageManager": "pnpm@^6",
+  "engines": {"node": "^18"}
 }
