--- a/actions/release-it/action.yaml
+++ b/actions/release-it/action.yaml
@@ -24,9 +24,6 @@ inputs:
   NPM_TOKEN:
     description: ""
     required: true
-  package_manager:
-    description: ""
-    required: true
   monorepo:
     description: ""
     required: false
@@ -51,7 +48,7 @@ runs:
         branch_name=$(git rev-parse --abbrev-ref HEAD)
         echo "branch_name=$branch_name" >> $GITHUB_ENV
         echo "action_path=${GITHUB_ACTION_PATH}" >> $GITHUB_ENV
-        ${{ inputs.package_manager }} install --global @release-it/conventional-changelog@8.0.1 release-it@17.2.0
+        pnpm install --global @release-it/conventional-changelog@8.0.1 release-it@17.2.0
     - name: Release it
       env:
         GITHUB_TOKEN: ${{ inputs.GH_TOKEN }}
@@ -63,7 +60,6 @@ runs:
         APICULTURIST_TOKEN: ${{ inputs.APICULTURIST_TOKEN }}
         release_branches: ${{ inputs.release_branches }}
         monorepo: ${{ inputs.monorepo }}
-        package_manager: ${{ inputs.package_manager }}
         spec_command: ${{ inputs.spec_command }}
       shell: bash
       run: |
