--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -12,10 +12,6 @@ inputs:
   NPMRC_ENCODED:
     description: "BASE64 encoded .npmrc file"
     required: false
-  package_manager:
-    description: The desired package manager to be used, [yarn, npm, pnpm, bun]
-    required: true
-    default: yarn
   ref:
     description: The ref to checkout using actions/checkout
     required: false
@@ -47,52 +43,20 @@ runs:
         npm config set @qlik-trial:registry https://npm.pkg.github.com/
         npm config set "//npm.pkg.github.com/:_authToken=${{ inputs.GH_ACCESS_TOKEN }}"
 
-        echo '[install.scopes]' >> ~/.bunfig.toml
-        echo 'qlik-trial = { url = "https://npm.pkg.github.com", token = "${{ inputs.GH_ACCESS_TOKEN }}" }' >> ~/.bunfig.toml
-        echo 'qlik-oss = { url = "https://npm.pkg.github.com", token = "${{ inputs.GH_ACCESS_TOKEN }}" }' >> ~/.bunfig.toml
-
     - name: Setup npm access to npmjs registry
       if: inputs.NPM_TOKEN != null
       shell: bash
-      run: |
-        npm config set "//registry.npmjs.org/:_authToken=${{ inputs.NPM_TOKEN }}"
+      run: npm config set "//registry.npmjs.org/:_authToken=${{ inputs.NPM_TOKEN }}"
 
     - name: Setup pnpm
-      if: inputs.package_manager == 'pnpm'
       uses: pnpm/action-setup@v2
-
-    - name: Setup bun
-      if: inputs.package_manager == 'bun'
-      uses: oven-sh/setup-bun@v1
 
     - name: Setup Node
       uses: actions/setup-node@v4
       with:
         node-version: 18
-        cache: ${{ inputs.package_manager != 'bun' && inputs.package_manager || null }}
+        cache: pnpm
 
     - name: Install dependencies
       shell: bash
-      run: |
-        # Install dependencies
-        case ${{ inputs.package_manager }} in
-          npm)
-            npm ci
-            ;;
-
-          yarn)
-            yarn install --immutable --frozen-lockfile
-            ;;
-
-          pnpm)
-            pnpm install --frozen-lockfile
-            ;;
-
-          bun)
-            bun install --frozen-lockfile
-          ;;
-
-          *)
-            echo "unknown"
-            ;;
-        esac
+      run: pnpm install --frozen-lockfile
