--- a/actions/scan-packages/action.yaml
+++ b/actions/scan-packages/action.yaml
@@ -27,4 +27,4 @@ runs:
 
     - name: Verify stardust
       shell: bash
-      run: pnpm -r exec ${{ github.action_path }}/checkPeerDeps.sh
+      run: pnpm -r --workspace-concurrency=1 exec ${{ github.action_path }}/checkPeerDeps.sh
