--- a/actions/scan-packages/action.yaml
+++ b/actions/scan-packages/action.yaml
@@ -6,6 +6,9 @@ outputs:
   scripts:
     description: "The scripts available in the root package.json"
     value: ${{ steps.package.outputs.scripts }}
+  matrix:
+    description: "The matrix to run jobs on"
+    value: ${{ steps.package.outputs.matrix }}
 
 runs:
   using: composite
@@ -24,7 +27,12 @@ runs:
         else
           echo "::error::Couldn't find a script section in package.json"
         fi
-
+        matrix=pnpm m ls --json --depth=-1 | jq '[.[].name]'
+        if [ "$matrix" != "null" ]; then
+          echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
+        else
+          echo "::error::Failure to setup matrix"
+        fi
     - name: Verify stardust
       shell: bash
       run: pnpm -r --workspace-concurrency=1 exec ${{ github.action_path }}/checkPeerDeps.sh
