--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,6 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       scripts: ${{ steps.package.outputs.scripts }}
+      matrix: ${{ steps.package.outputs.matrix }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -70,11 +71,6 @@ jobs:
       - name: Typescript
         if: contains(fromJSON(needs.read_package.outputs.scripts), 'types:check')
         run: pnpm run types:check
-
-      - name: Dev Build
-        uses: qlik-oss/sn-gh-workflows/actions/upload-build@dvr/upload-devbuilds
-        with:
-          MATRIX: ${{ needs.read_packages.outpus.matrix }}
 
       - name: Run unit tests
         uses: paambaati/codeclimate-action@v5.0.0
@@ -148,3 +144,16 @@ jobs:
           APICULTURIST_GITHUB: ${{ secrets.APICULTURIST_GITHUB }}
           APICULTURIST_TOKEN: ${{ secrets.APICULTURIST_TOKEN }}
           monorepo: ${{ inputs.monorepo }}
+
+  dev_build:
+    runs-on: ubuntu-latest
+    needs: read_package
+    name: ${{ matrix.repo }}
+    strategy:
+      fail-fast: false
+      matrix:
+        repo: ${{ needs.read_package.outputs.matrix }}
+    steps:
+      - name: Dev build
+        run: |
+          echo "Hello"
