--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,7 +28,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       scripts: ${{ steps.package.outputs.scripts }}
-      matrix: ${{ steps.package.outputs.matrix }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -148,12 +147,12 @@ jobs:
   dev_build:
     runs-on: ubuntu-latest
     needs: read_package
-    name: ${{ matrix.repo }}
-    strategy:
-      fail-fast: false
-      matrix:
-        repo: ${{ needs.read_package.outputs.matrix }}
     steps:
-      - name: Dev build
-        run: |
-          echo "Hello"
+      - name: Setup workspace
+        uses: qlik-oss/sn-gh-workflows/actions/setup@v3.0.1
+        with:
+          GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN || secrets.NPM_CI_TOKEN }}
+          NPMRC_ENCODED: ${{ secrets.QLIK_NPM_DEV_ENCODED }}
+      - name: Upload dev builds
+        uses: qlik-oss/sn-gh-workflow/actions/upload-build@dvr/upload-devbuilds
