--- a/actions/upload-build/action.yaml
+++ b/actions/upload-build/action.yaml
@@ -12,6 +12,7 @@ runs:
 
   steps:
     - name: Dev builds
+      shell: bash
       run: pnpm -r build:dev
     - name: Upload builds
       shell: bash
