--- a/actions/upload-build/action.yaml
+++ b/actions/upload-build/action.yaml
@@ -11,6 +11,8 @@ runs:
   using: composite
 
   steps:
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v3
     - name: Dev builds
       shell: bash
       run: pnpm -r build:dev
