fix: include bucket name

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -174,3 +174,4 @@ jobs:
           allow-overwrite: true
           include-sourcemaps: true
           dry-run: true
+          aws-bucket-name: "hub-devbuilds"
