--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,8 +11,14 @@ jobs:
           fetch-depth: 0
       - name: release-it
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           npx --package=@release-it/conventional-changelog --package=@j-ulrich/release-it-regex-bumper release-it
+      - name: Move major tag
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/}
+          MAJOR=v${VERSION%%.*}
+          git tag -fa ${MAJOR} -m "Update major version tag"
+          git push origin ${MAJOR} --force
