--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          token: ${{ secrets.GH_ACCESS_TOKEN }}
           fetch-depth: 0
       - name: release-it
         env:
@@ -15,9 +16,9 @@ jobs:
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+
           npx --package=@release-it/conventional-changelog --package=@j-ulrich/release-it-regex-bumper release-it
-      - name: Move major tag
-        run: |
+
           VERSION=${GITHUB_REF#refs/tags/}
           MAJOR=v${VERSION%%.*}
           git tag -fa ${MAJOR} -m "Update major version tag"
