--- a/actions/get-devbuild-comment/action.yaml
+++ b/actions/get-devbuild-comment/action.yaml
@@ -31,9 +31,9 @@ runs:
         NAMESPACE: ${{ inputs.namespace }}
         VERSION: ${{ inputs.version }}
         FILE: ${{ inputs.file }}
-        COMMIT: ${{ }}
+        COMMIT: ${{ github.sha }}
       run: |
-        COMMENT="Created a dev build for commit ${{ github.sha }}\n\n"
+        COMMENT="Created a dev build for commit $COMMIT\n\n"
         COMMENT+="To use the devbuild follow these steps:\n"
         COMMENT+="1. Open Browser DevTools (F12)"$'\n'
         COMMENT+="2. Go to Console tab"$'\n'
