--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,9 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       scripts: ${{ steps.package.outputs.scripts }}
-      repoNames: ${{ steps.package.outputs.repoNames }}
-      repoFolders: ${{ steps.package.outputs.repoFolders }}
-      systemJSFiles: ${{ steps.package.outputs.systemJSFiles }}
+      matrix: ${{ steps.package.outputs.matrix }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -150,11 +148,8 @@ jobs:
   dev_build:
     runs-on: ubuntu-latest
     needs: read_package
-    name: ${{ matrix.repos }}
-    strategy:
-      fail-fast: false
-      matrix:
-        repos: ${{fromJSON(needs.read_package.outputs.repoNames)}}
+    name: ${{ matrix.package }}
+    strategy: ${{fromJSON(needs.read_package.outputs.strategy)}}
     steps:
       - name: Setup workspace
         uses: qlik-oss/sn-gh-workflows/actions/setup@v3.0.1
@@ -163,13 +158,13 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN || secrets.NPM_CI_TOKEN }}
           NPMRC_ENCODED: ${{ secrets.QLIK_NPM_DEV_ENCODED }}
       - name: Dev build
-        run: pnpm -r --filter ${{ matrix.repos }} build:dev
+        run: pnpm -r --filter ${{ matrix.package }} build:dev
       - name: Upload dev build
         uses: qlik-trial/qmfe-workflows/actions/qmfe-to-aws@v1
         with:
           aws-access-key-id: ${{ secrets.QMFE_DEV_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.QMFE_DEV_ACCESS_KEY }}
-          qmfe-id: ${{ matrix.repos }}
+          qmfe-id: ${{ matrix.package }}
           source: ${{fromJSON(needs.read_package.outputs.repoFolders)[strategy.job-index]}}/dist
           version: ${{ github.event.number }}
           allow-overwrite: true
@@ -180,7 +175,7 @@ jobs:
         id: comment
         uses: qlik-oss/sn-gh-workflows/actions/get-devbuild-comment@dvr/upload-devbuilds
         with:
-          package: ${{ matrix.repos }}
+          package: ${{ matrix.package }}
           namespace: "nebula"
           version: ${{ github.event.number }}
           file: ${{fromJSON(needs.read_package.outputs.systemJSFiles)[strategy.job-index]}}
@@ -190,6 +185,6 @@ jobs:
         with:
           body: ${{ steps.comment.outputs.comment }}
           edit-mode: replace
-          comment-id: ${{ matrix.repos }}
+          comment-id: ${{ matrix.package }}
           issue-number: ${{ github.event.pull_request.number }}
           reactions: rocket
