--- a/actions/scan-packages/action.yaml
+++ b/actions/scan-packages/action.yaml
@@ -52,4 +52,5 @@ runs:
         done
 
         strategy="{ \"fail-fast\": false, \"matrix\": {\"include\": [${matrixEntries%?}] }}"
+        echo $strategy
         echo "strategy=$strategy" >> "$GITHUB_OUTPUT"
